<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startActivityHeader"
        android:textSize="20sp" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonThreading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/radioButtonThreadingString" />

        <RadioButton
            android:id="@+id/radioButtonNoThreading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/radioButtonNoThreadingString" />

    </RadioGroup>

    <Button
        android:id="@+id/startActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startActivityButton" />


</LinearLayout>
