<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/threadingImageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/ImageViewContentDescription" />

    <Button
        android:id="@+id/threadingImageViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ImageViewButton" />

    <Button
        android:id="@+id/threadingToastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ToastButton" />

</LinearLayout>
